--- a/characters.html
+++ b/characters.html
@@ -15,7 +15,7 @@
 		<nav>
 			<li class="active"><a href="index.html">Home</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="Items.html">Items</a></li>
+			<li><a href="items.html">Items</a></li>
 		</nav>
 	</header>
 
