--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="characters.html">Characters</a></li>
-				<li><a href="Items.html">Items</a></li>
+				<li><a href="items.html">Items</a></li>
 			</ul>
 		</nav>
 		<img src="images/nh.jpg" width="500"/>
