--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,16 @@
 			<li><a href="characters.html">Characters</a></li>
 		</nav>
 	</header>
-
 	<main>
+		<h2>Animal Crossing New Horizon </h2>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget
+			augue sollicitudin, venenatis sapien eget, finibus eros. Mauris tristique
+			mi id lacus vehicula, faucibus facilisis magna faucibus. Proin ut placerat
+			lectus. Curabitur in quam neque. Donec at erat felis. Pellentesque et
+			justo et velit malesuada fringilla.
+		</p>
+		
 		<img src="images/g1.jpg" width="500"/>
 		<img src="images/g2.jpg" width="500"/>
 		<img src="images/g3.jpg" width="500"/>
