--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
+				<li class="active"><a href="index.html">Homee</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="characters.html">Characters</a></li>
 				<li><a href="items.html">Items</a></li>
