--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</ul>
 		</nav>
 		<img src="images/nh.jpg" width="500"/>
-		<figcaption>Animal Crossing New Horizon</figcaption>
+		<figcaption>Animal Crossing New Horizon m</figcaption>
 
 	</header>
 
