--- a/items.html
+++ b/items.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+<!-- 	<div class="skip"><a href="#main">Skip to Main Content</a></div> -->
 	<!-- Navbar -->
 	<div class="main-container">
 		<div class="first-container">
