--- a/characters.html
+++ b/characters.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+<!-- 	<div class="skip"><a href="#main">Skip to Main Content</a></div> -->
 	<!-- Navbar -->
 	<div class="main-container">
 		<div class="first-container">
@@ -34,7 +34,7 @@
 			</nav>
 		</div>
 		<div class="header_image">
-			<img src="images/villagers.JPG" height="60%" width="60%" class="center">
+			<img src="images/villagers.JPG" alt="map" height="60%" width="60%" class="center">
 		</div>
 	</div>
 
