--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,7 @@
 	</main>
 
 	<div class="gallery-content">
+		<h1>My Gallery</h1>
 		<p>
 			I started to play this game when it was first released on Mar 20, 2020. This game brougth some much joy and happiness especially during the lockdown time. <br>
 			In this gallery, I will show screenshots of some important moments (photos and videos)!
