--- a/characters.html
+++ b/characters.html
@@ -36,6 +36,7 @@
 
 
 	<!-- Page content -->
+	<main>
 	<div class="character_header_img">
 		<figure>
 			<img src="images/villagers.JPG" alt="map" class="center">
@@ -43,6 +44,7 @@
 	</div>
 	<div class="character_content">
 		<p>
+			<h1>My Villagers</h1>
 			The version I played is Animal Crossing: New Horizons. This game was first published on March 20, 2020. My island is located on the North Hemisphere (which is same as real world), so the character in the New Horizons is experiencing the same season and holidays with me. <br />
 			<br />
 			There is a total of 10 villagers live on my island, which are Blanche, Dom, Fang, Fauna, Ione, Marshal, Molly, Pekoe, Plucky, and Rosie. Villagers can come in sereval different personality types. They include: Jocks, Uchi (Big Sister), Normal, Peppy, Lazy, Snooty, Cranky, and Smug. Certain types of villagers will always show up on your island – as you will always start the game with a Jock and Uchi villager alongside you. <br />
@@ -52,7 +54,7 @@
 			In this page, I will introduce each one of them and their characteristics. 
 		</p>
 	</div>
-
+	</main>
 	<footer class="character_footer">
 		<p>Mu Ding Copyright:2022</p>
 	</footer>
