--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<br />
 				In this website, I will show you something about my island – the villagers who live on the island, the items I have, and a gallery page showing some important moments. 
 			</p>
+			<a href="https://docs.google.com/document/d/1LYP1xZTJSZPOeJAhEPiIbLPdtstm3RsmaE0dcNcjE14/edit#heading=h.s70usqktiaxz">Link to my Google Doc</a>
 		</article>
 	</main>
 
