--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,7 @@
 		<p>
 			I started to play this game when it was first released on Mar 20, 2020. This game brougth some much joy and happiness especially during the lockdown time. <br>
 			In this gallery, I will show screenshots of some important moments (photos and videos)!
+			Currently, the gallery shows pictures of my birthday celeration, first day on the island, some holiday celerations, as well as some cute moments with my villagers.
 		</p>
 	</div>
 
