--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
   </header>
   <!-- Page content -->
-  <main class="index-main">
+  <main class="index-main" id="main">
     <article class="content">
       <h1>About Animal Crossing</h1>
       <p>
